# SiemensS7PLC-South-Driver-for-NEURON

./: CMakeLists.txt  S7-Communication.json  run.sh  s7_communication_plugin.c  s7_communication_plugin.h
s7_functions/: s7_functions.c  s7_functions.h
siemens_plc_s7_net/: siemens_s7_comm.h  siemens_s7_private.h  socket.c  typedef.h  utill.c
tag_handle/: tag_handle.c  tag_handle.h
